fix bug with scrollbar in specialist window on map on home page

--- a/frontend/app/scss/_home.scss
+++ b/frontend/app/scss/_home.scss
@@ -327,6 +327,8 @@ $title-color: #8e8e8e;
 
   .specialist-window {
 
+    overflow: hidden;
+
     .star-rating ul li i {
       color: $primary-blue;
 
